--- a/config/Localization/LayoutText/LayoutText_jp.xml
+++ b/config/Localization/LayoutText/LayoutText_jp.xml
@@ -1,30 +1,26 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <mt_config>
-  <language_code>pt-br</language_code>
+  <language_code>jp</language_code>
   <locale_space name="LayoutText">
     <locale_entry>
-      <Name>LayoutText/POListLayoutTemplate/</Name>
-      <Value></Value>
-    </locale_entry>
-    <locale_entry>
       <Name>LayoutText/AudioConfCall/Title</Name>
-      <Value>Detalhes da conferência</Value>
+      <Value>会議の詳細</Value>
     </locale_entry>
     <locale_entry>
       <Name>LayoutText/ManageNonStandardCharge/TEXT_APPROVE</Name>
-      <Value>Aprovar</Value>
+      <Value>承認</Value>
     </locale_entry>
     <locale_entry>
       <Name>LayoutText/ManageNonStandardCharge/TEXT_APPROVE_ALL</Name>
-      <Value>Aprovar tudo</Value>
+      <Value>すべて承認</Value>
     </locale_entry>
     <locale_entry>
       <Name>LayoutText/ManageNonStandardCharge/TEXT_DENY</Name>
-      <Value>Negar</Value>
+      <Value>拒否</Value>
     </locale_entry>
     <locale_entry>
       <Name>LayoutText/ManageNonStandardCharge/TEXT_DENY_ALL</Name>
-      <Value>Negar tudo</Value>
+      <Value>すべて拒否</Value>
     </locale_entry>
   </locale_space>
 </mt_config>
