--- a/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.it.resx
+++ b/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.it.resx
@@ -157,7 +157,7 @@
     <value>ID sessione conflitto</value>
   </data>
   <data name="TEXT_COUNTY_AMOUNT" xml:space="preserve">
-    <value>[it] Tax County</value>
+    <value>[it] County Tax</value>
   </data>
   <data name="TEXT_CURRENCY" xml:space="preserve">
     <value>Valuta</value>
@@ -184,7 +184,7 @@
     <value>Si è verificato un errore durante l'elaborazione della rettifica varia.</value>
   </data>
   <data name="TEXT_FEDERAL_AMOUNT" xml:space="preserve">
-    <value>[it] Tax Federal</value>
+    <value>[it] Federal Tax</value>
   </data>
   <data name="TEXT_GUIDE_INTERVAL_ID" xml:space="preserve">
     <value>ID intervallo guida</value>
@@ -193,7 +193,7 @@
     <value>ID intervallo</value>
   </data>
   <data name="TEXT_LOCAL_AMOUNT" xml:space="preserve">
-    <value>[it] Tax Local</value>
+    <value>[it] Local Tax</value>
   </data>
   <data name="TEXT_NO_IDS" xml:space="preserve">
     <value>Selezionare le rettifiche da elaborare.</value>
@@ -202,7 +202,7 @@
     <value>Altro</value>
   </data>
   <data name="TEXT_OTHER_AMOUNT" xml:space="preserve">
-    <value>[it] Tax Other</value>
+    <value>[it] Other Tax</value>
   </data>
   <data name="TEXT_PENDING_STATUS" xml:space="preserve">
     <value>In sospeso</value>
@@ -217,7 +217,7 @@
     <value>Tipo sessione</value>
   </data>
   <data name="TEXT_STATE_AMOUNT" xml:space="preserve">
-    <value>[it] Tax State</value>
+    <value>[it] State Tax</value>
   </data>
   <data name="TEXT_STATUS" xml:space="preserve">
     <value>Stato</value>
