--- a/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.ja.resx
+++ b/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.ja.resx
@@ -157,7 +157,7 @@
     <value>競合セッション ID</value>
   </data>
   <data name="TEXT_COUNTY_AMOUNT" xml:space="preserve">
-    <value>[ja] Tax County</value>
+    <value>[ja] County Tax</value>
   </data>
   <data name="TEXT_CURRENCY" xml:space="preserve">
     <value>通貨</value>
@@ -184,7 +184,7 @@
     <value>各種調整の処理中にエラーが発生しました。</value>
   </data>
   <data name="TEXT_FEDERAL_AMOUNT" xml:space="preserve">
-    <value>[ja] Tax Federal</value>
+    <value>[ja] Federal Tax</value>
   </data>
   <data name="TEXT_GUIDE_INTERVAL_ID" xml:space="preserve">
     <value>ガイド期間 ID</value>
@@ -193,7 +193,7 @@
     <value>間隔 ID</value>
   </data>
   <data name="TEXT_LOCAL_AMOUNT" xml:space="preserve">
-    <value>[ja] Tax Local</value>
+    <value>[ja] Local Tax</value>
   </data>
   <data name="TEXT_NO_IDS" xml:space="preserve">
     <value>処理する調整を選択してください。</value>
@@ -202,7 +202,7 @@
     <value>その他</value>
   </data>
   <data name="TEXT_OTHER_AMOUNT" xml:space="preserve">
-    <value>[ja] Tax Other</value>
+    <value>[ja] Other Tax</value>
   </data>
   <data name="TEXT_PENDING_STATUS" xml:space="preserve">
     <value>保留</value>
@@ -217,7 +217,7 @@
     <value>セッション種別</value>
   </data>
   <data name="TEXT_STATE_AMOUNT" xml:space="preserve">
-    <value>[ja] Tax State</value>
+    <value>[ja] State Tax</value>
   </data>
   <data name="TEXT_STATUS" xml:space="preserve">
     <value>状況</value>
