--- a/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.pt-br.resx
+++ b/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.pt-br.resx
@@ -157,7 +157,7 @@
     <value>ID da sessão de contenção</value>
   </data>
   <data name="TEXT_COUNTY_AMOUNT" xml:space="preserve">
-    <value>[pt-br] Tax County</value>
+    <value>[pt-br] County Tax</value>
   </data>
   <data name="TEXT_CURRENCY" xml:space="preserve">
     <value>Moeda</value>
@@ -184,7 +184,7 @@
     <value>Ocorreu um erro durante o processamento de um ajuste diverso.</value>
   </data>
   <data name="TEXT_FEDERAL_AMOUNT" xml:space="preserve">
-    <value>[pt-br] Tax Federal</value>
+    <value>[pt-br] Federal Tax</value>
   </data>
   <data name="TEXT_GUIDE_INTERVAL_ID" xml:space="preserve">
     <value>ID do intervalo do guia</value>
@@ -193,7 +193,7 @@
     <value>ID do intervalo</value>
   </data>
   <data name="TEXT_LOCAL_AMOUNT" xml:space="preserve">
-    <value>[pt-br] Tax Local</value>
+    <value>[pt-br] Local Tax</value>
   </data>
   <data name="TEXT_NO_IDS" xml:space="preserve">
     <value>Selecione ajustes para processar.</value>
@@ -202,7 +202,7 @@
     <value>Outro</value>
   </data>
   <data name="TEXT_OTHER_AMOUNT" xml:space="preserve">
-    <value>[pt-br] Tax Other</value>
+    <value>[pt-br] Other Tax</value>
   </data>
   <data name="TEXT_PENDING_STATUS" xml:space="preserve">
     <value>Pendente</value>
@@ -217,7 +217,7 @@
     <value>Tipo de sessão</value>
   </data>
   <data name="TEXT_STATE_AMOUNT" xml:space="preserve">
-    <value>[pt-br] Tax State</value>
+    <value>[pt-br] State Tax</value>
   </data>
   <data name="TEXT_STATUS" xml:space="preserve">
     <value>Status</value>
